# Ymir

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMPILING.md  Doxyfile  README.md
apps/satemu-sandbox/: CMakeLists.txt  README.md
apps/satemu-sandbox/packaging/: CMakeLists.txt
apps/satemu-sandbox/src/: main.cpp
apps/satemu-sdl3/: CMakeLists.txt
apps/satemu-sdl3/packaging/: CMakeLists.txt
apps/satemu-sdl3/src/: main.cpp
apps/satemu-sdl3/src/app/: actions.hpp  app.cpp  app.hpp  app_impl.cpp  app_impl.hpp  audio_system.hpp  cmdline_opts.hpp  context.hpp  folder_manager.cpp  folder_manager.hpp  ipl_rom_manager.cpp  ipl_rom_manager.hpp  profile.cpp  profile.hpp  rewind_buffer.cpp  rewind_buffer.hpp  settings.cpp  settings.hpp  shared_context.hpp
apps/satemu-sdl3/src/app/debug/: scu_tracer.cpp  scu_tracer.hpp  sh2_tracer.cpp  sh2_tracer.hpp
apps/satemu-sdl3/src/app/events/: emu_debug_event_factory.hpp  emu_event.hpp  emu_event_factory.cpp  emu_event_factory.hpp  emu_events.hpp  gui_event.hpp  gui_event_factory.hpp
apps/satemu-sdl3/src/app/input/: input_action.hpp  input_backend_sdl3.cpp  input_backend_sdl3.hpp  input_capturer.cpp  input_capturer.hpp  input_context.cpp  input_context.hpp  input_defs.cpp  input_defs.hpp  input_events.cpp  input_events.hpp  input_handler.cpp  input_handler.hpp  input_primitives.cpp  input_primitives.hpp  input_utils.hpp
apps/satemu-sdl3/src/app/ui/: memory_viewer.cpp  memory_viewer.hpp  scu_debugger.cpp  scu_debugger.hpp  sh2_debugger.cpp  sh2_debugger.hpp  sh2_interrupt_tracer.cpp  sh2_interrupt_tracer.hpp  sh2_interrupts.cpp  sh2_interrupts.hpp  window_base.hpp
apps/satemu-sdl3/src/serdes/: cereal_archive_vector.hpp  state_v1_cereal.hpp
apps/satemu-sdl3/src/util/: file_loader.cpp  file_loader.hpp  ipl_rom_loader.cpp  ipl_rom_loader.hpp  regions.cpp  regions.hpp  ring_buffer.hpp  rom_loader.cpp  sdl_file_dialog.hpp
apps/ymdasm/: CMakeLists.txt  README.md
apps/ymdasm/packaging/: CMakeLists.txt
apps/ymdasm/src/: ansi.hpp  cmd_opts.hpp  colors.hpp  disassembler.hpp  disassembler_m68k.cpp  disassembler_m68k.hpp  disassembler_scspdsp.cpp  disassembler_scspdsp.hpp  disassembler_scudsp.cpp  disassembler_scudsp.hpp  disassembler_sh2.cpp  disassembler_sh2.hpp  fetcher.hpp  processors.hpp  utils.hpp  ymdasm.cpp
apps/ymdasm/src/processors/: option_info.hpp  processor.hpp  processor_initial.cpp  processor_initial.hpp  processor_interface.hpp  processors.hpp
apps/ymir-sandbox/: CMakeLists.txt  README.md
apps/ymir-sandbox/src/: main.cpp
apps/ymir-sdl3/: CMakeLists.txt
apps/ymir-sdl3/packaging/: CMakeLists.txt
apps/ymir-sdl3/res/: io.github.strikerx3.ymir.desktop  io.github.strikerx3.ymir.xml  ymir.rc
apps/ymir-sdl3/src/: main.cpp
apps/ymir-sdl3/src/app/: actions.hpp  app.cpp  app.hpp  audio_system.cpp  audio_system.hpp  cmdline_opts.hpp  ipl_rom_manager.cpp  ipl_rom_manager.hpp  message.hpp  profile.cpp  profile.hpp  rewind_buffer.cpp  rewind_buffer.hpp  rom_manager.cpp  rom_manager.hpp  settings.cpp  settings.hpp  shared_context.cpp  shared_context.hpp
apps/ymir-sdl3/src/app/debug/: cdblock_tracer.cpp  cdblock_tracer.hpp  scsp_tracer.cpp  scsp_tracer.hpp  scu_tracer.cpp  scu_tracer.hpp  sh2_tracer.cpp  sh2_tracer.hpp
apps/ymir-sdl3/src/app/events/: emu_debug_event_factory.cpp  emu_debug_event_factory.hpp  emu_event.hpp  emu_event_factory.cpp  emu_event_factory.hpp  gui_event.hpp  gui_event_factory.hpp
apps/ymir-sdl3/src/app/input/: input_action.hpp  input_backend_sdl3.cpp  input_backend_sdl3.hpp  input_bind.hpp  input_capturer.hpp  input_context.cpp  input_context.hpp  input_events.cpp  input_events.hpp  input_primitives.cpp  input_primitives.hpp  input_utils.hpp
apps/ymir-sdl3/src/app/ui/: window_base.cpp  window_base.hpp
apps/ymir-sdl3/src/serdes/: cereal_archive_vector.hpp  state_cereal.hpp  state_v1_cereal.hpp
apps/ymir-sdl3/src/util/: file_loader.cpp  file_loader.hpp  ipl_rom_loader.cpp  ipl_rom_loader.hpp  math.hpp  os_exception_handler.cpp  os_exception_handler.hpp  regions.cpp  regions.hpp  ring_buffer.hpp  sdl_file_dialog.hpp  std_lib.cpp  std_lib.hpp
apps/ymir-sdl3/src/util/mig/: macos_mig.c  macos_mig.h
libs/satemu-core/: CMakeLists.txt
libs/satemu-core/include/satemu/: core_types.hpp  satemu.hpp  version.hpp
libs/satemu-core/include/satemu/core/: configuration.hpp  configuration_defs.hpp  hash.hpp  scheduler.hpp  scheduler_defs.hpp
libs/satemu-core/include/satemu/db/: ipl_db.hpp
libs/satemu-core/include/satemu/debug/: debug.hpp  debug_probe.hpp  debug_probe_sh2.hpp  debug_tracer.hpp  debug_tracer_sh2.hpp  scu_tracer.hpp  scu_tracer_base.hpp  scu_tracer_ctx.hpp  sh2_tracer.hpp  sh2_tracer_ctx.hpp  sys_tracer.hpp  sys_tracer_ctx.hpp
libs/satemu-core/include/satemu/hw/: hw_defs.hpp
libs/satemu-core/include/satemu/media/: cd_struct.hpp  disc.hpp  filesystem.hpp  filter.hpp  frame_address.hpp  iso9660.hpp  media_defs.hpp  saturn_header.hpp  subheader.hpp
libs/satemu-core/include/satemu/sh2/: sh2.hpp  sh2_bus.hpp  sh2_bus_defs.hpp
libs/satemu-core/include/satemu/smpc/: smpc.hpp  smpc_defs.hpp
libs/satemu-core/include/satemu/state/: state.hpp  state_cdblock.hpp  state_hash.hpp  state_m68k.hpp  state_scheduler.hpp  state_scsp.hpp  state_scsp_dsp.hpp  state_scsp_slot.hpp  state_scsp_timer.hpp  state_scu.hpp  state_sh2.hpp  state_smpc.hpp  state_system.hpp  state_vdp.hpp
libs/satemu-core/packaging/: CMakeLists.txt
libs/satemu-core/src/satemu/: config.hpp  satemu.cpp
libs/satemu-core/src/satemu/sh2/: sh2.cpp
libs/satemu-frontend-base/: CMakeLists.txt
libs/satemu-frontend-base/packaging/: CMakeLists.txt
libs/satemu-frontend-base/src/: winmain.cpp
libs/ymir-core/: CMakeLists.txt
libs/ymir-core/docs/: mainpage.dox  mainpage.hpp  namespaces.hpp
libs/ymir-core/include/ymir/: version.hpp  ymir.hpp
libs/ymir-core/packaging/: CMakeLists.txt
libs/ymir-core/src/ymir/: ymir.cpp
packaging/: CMakeLists.txt  satemuConfig.cmake
tests/satemu-core-tests/: CMakeLists.txt
tests/satemu-core-tests/src/: tests_main.cpp
tests/ymir-core-tests/: CMakeLists.txt
(+837 files in other folders)
